src/test/deca/syntax/invalid/created/noSCPrint.deca
//

// On essaye de compiler un print sans ; en fin de ligne.

{
    print("World Hello")
}
